--- a/app/.env.EXAMPLE
+++ b/app/.env.EXAMPLE
@@ -1,5 +1,4 @@
 SOCKET_SERVER_PORT=3000
-FLASK_SERVER_IP=0.0.0.0
-FLASK_SERVER_PORT=3000
-WEBCAM=0
+SOCKET_SERVER_HOST=localhost
 DATASET_PATH=rice_data/train
+TEST_IMAGE_PATH=dataset/rice_data/test/1/p11_rice33.jpg
