--- a/app/.env.EXAMPLE
+++ b/app/.env.EXAMPLE
@@ -1,4 +1,4 @@
 SOCKET_SERVER_PORT=3000
 SOCKET_SERVER_HOST=localhost
-DATASET_PATH=rice_data/train
-TEST_IMAGE_PATH=dataset/rice_data/test/1/p11_rice33.jpg
+DATASET_PATH=rice_data
+TEST_IMAGE_PATH=rice_data/p09_rice30.jpg
